added promo email

--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -16,9 +16,9 @@ a{
 }
 a:hover{
     text-shadow: 0 0 5px rgb(0, 255, 13);
+    color: rgba(0, 0, 0, 0.322);
 }
 .project-list{
-    border:2px solid red;
     width: 100vw;
     display: flex;
     flex-direction: column;
