added social links to promo email and fixed one app row

--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -3,12 +3,7 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 ul{ 
-    list-style: none;
-}
-.project-list ul{
-    margin:0;
-    padding:0;
-    align-items: space-around;
+    list-style: none !important;
 }
 a{
     text-decoration: none;
@@ -24,4 +19,26 @@ a{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.project-list ul{
+    margin:0;
+    padding:0;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border: 2px solid black;
+    padding: 10px;
+    height: 50vh;
+    width: 80vw;
+}
+.project-list-individual-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap:nowrap;
+    flex-flow: column;
+    align-items: center;
+}
+.email-preview{
+    width: 250px;
 }
