--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,7 +5,11 @@
     width:100vw;
 }
 .navbar-list{
-    width: 20vw;
+    width: 70vw;
     display:flex;
     justify-content: space-between;
+    border:2px solid red;
+}
+.arrow-icon{
+    padding-right:10px;
 }
