--- a/src/components/projects/emails/newsletter/newsletterEmail1.css
+++ b/src/components/projects/emails/newsletter/newsletterEmail1.css
@@ -21,6 +21,9 @@
     .container{
         width: 100%;
     }
+    .nav-links-top{
+        font-size:12px !important; 
+    }
     .fashion-nova-logo{
         width: 100%;
         height: 20% !important;
