--- a/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
+++ b/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
@@ -34,10 +34,18 @@
 .apartment-landing-page-nav > nav > a{ 
     letter-spacing: 12;
 }
+.apartment-landing-page-nav > nav > a:hover{
+    color:rgb(225,183,136)
+}
 #apartment-nav-inquire-button{
     border:2px solid white;
     padding:5px 10px;
     z-index:121;
+}
+#apartment-nav-inquire-button:hover{
+    background-color: rgb(225,183,136);
+    color:black;
+    border-color:rgb(225,183,136);
 }
 .apartment-landing-page-hero-section{
     height:100vh;
@@ -281,12 +289,17 @@
     align-items: center;
     justify-content: space-between;
 }
-
-
+.apartment-landing-footer a:hover,
+.apartment-landing-page-social-links a:hover{
+    color:rgb(225,183,136);
+    text-decoration: underline;
+}
+.apartment-form-button a:hover{
+    background-color: black;
+    color:white !important;
+    border-color:black;
+}
 @media only screen and (min-width: 960px){
-    .container{
-        width: 960px;
-    }
     .apartment-landing-dropdown-nav,
     #apartment-landing-hamburger,
     #apartment-landing-hamburger i{
