--- a/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
+++ b/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
@@ -5,8 +5,17 @@
     color:white;
     font-family:serif;
 }
+.apartment-landing-page-body h1,
+.apartment-landing-page-body h2,
+.apartment-landing-page-body h3,
+.apartment-landing-page-body h4,
+.apartment-landing-page-body h5,
+.apartment-landing-page-body h6{
+    font-weight:400;
+}
 .apartment-landing-page-body{
-    scroll-behavior: smooth;
+    scroll-behavior: smooth !important;
+    font-family: serif !important;
 }
 .apartment-landing-page-nav-container{
     position: sticky;
@@ -26,7 +35,7 @@
 }
 .apartment-landing-page-nav nav{
     margin-right:30px;
-    width:38%;
+    width:45%;
     display:flex;
     justify-content: space-between;
     align-items: baseline;
@@ -57,6 +66,12 @@
     color:white;
     padding:0 100px;
 }
+.apartment-landing-page-hero-text h1{
+    font-size:45px;
+}
+.apartment-landing-page-hero-text p{
+    line-height: 1.7;
+}
 .four-diamonds-container > :nth-child(n + 2):nth-child(-n + 5){
     padding-left: 10px;
 }
@@ -82,6 +97,10 @@
     line-height: 1.5;
     text-align: center;
 }
+#apartment-landing-page-explore-second-p{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+    font-size:13px; 
+}
 .apartment-landing-page-explore i:hover{
     background-color: rgb(225,183,136) !important;
     transition: background-color 0.8s ease;
@@ -104,9 +123,12 @@
 .apartment-landing-page-your-space p{
     width:30%;
     color:white;
-    font-size:12px;
-    line-height: 1.5;
+    font-size:13px;
+    line-height: 1.7;
     text-align: center;
+}
+#apartment-your-space-second-p{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .apartment-landing-page-highlights{
     height: 90vh;
@@ -134,6 +156,14 @@
     display: flex;
     align-items: center;
 }
+.apartment-highlights-text{
+    height: 60%;
+    color:white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .apartment-highlights-text h4,
 .apartment-highlights-text div{
     margin:0;
@@ -142,19 +172,12 @@
 .apartment-highlights-text h4{
     padding-bottom:5px;
 }
-.apartment-highlights-text{
-    height: 55%;
-    color:white;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
 .apartment-highlights-text i{
     color: rgb(225,183,136) ;
 }
 .apartment-highlights-text p{
-    font-size:10px;
+    font-size:12px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .apartment-landing-page-location,
 .apartment-landing-page-location > div{
@@ -173,6 +196,9 @@
     line-height: 1.5;
     text-align: center;
 }
+#location-second-p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .apartment-landing-page-experience{
     height: 70vh;
     display: flex;
@@ -184,7 +210,7 @@
 .apartment-landing-page-experience > div{
     height: 45%;
     width:30%;
-    padding:25px 0;
+    padding:45px 0 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -200,6 +226,9 @@
     font-size:12px;
     line-height: 1.5;
     text-align: center;
+}
+#apartment-landing-page-experience-second-p{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .apartment-landing-page-form,
 .apartment-landing-page-form-heading ,
@@ -218,7 +247,14 @@
 .apartment-landing-page-form-heading{
     width:350px;
     text-align: center;
-    font-size:12px;
+}
+.apartment-landing-page-form-heading h4{
+    font-size:24px !important;
+}
+.apartment-landing-page-form-heading p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size:13px;
+    line-height: 1.7;
 }
 .apartment-landing-page-form-container{
     width:100%;
@@ -448,7 +484,7 @@
     .apartment-landing-page-experience > div{
         transform:rotate(0 deg);
         width:60%;
-        height:230px;
+        height:180px;
     }
     .apartment-landing-page-form-heading h4{
         font-weight:400;
@@ -561,7 +597,7 @@
     } 
     .apartment-landing-page-your-space,
     .apartment-landing-page-your-space > div{
-        height:350px;
+        height:500px;
     }
     .apartment-landing-page-your-space > div h6{
         margin:0;
