--- a/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
+++ b/src/components/projects/landing-pages/apartment-landing-page/apartmentLandingPage.css
@@ -1,5 +1,6 @@
 .apartment-landing-page-body .navbar a{
     color:black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .apartment-landing-page-body a{
     color:white;
