--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -9,6 +9,9 @@ a{
     text-decoration: none;
     color: rgb(56, 56, 56);
 }
+.home-page{
+    font-family: 'Ubuntu', sans-serif;
+}
 .intro-section{
     margin:0;
     height:300px;
@@ -18,6 +21,16 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.skills-section{
+    width:100%;
+    height:250px;
+    margin-top: 20px;
+    display:flex;
+    justify-content: space-around;
+}
+.skills-section li{
+    margin-bottom:10px;
 }
 .navbar-list a:hover,
 .project-list a:hover{
@@ -49,6 +62,9 @@ a{
 }
 .project-list-individual-container img:hover{
     filter:drop-shadow(0 0 5px rgb(71, 71, 71)) opacity(0.6);
+}
+.project-list-individual-container p{
+    font-weight:500;
 }
 .project-list h1{
     margin:0;
