--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -11,6 +11,7 @@ a{
 }
 .home-page{
     font-family: 'Ubuntu', sans-serif;
+    font-size:25px;
 }
 .intro-section{
     margin:0;
@@ -24,7 +25,7 @@ a{
 }
 .skills-section{
     width:100%;
-    height:250px;
+    height:350px;
     margin-top: 20px;
     display:flex;
     justify-content: space-around;
