--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -33,6 +33,9 @@ a{
 .skills-section li{
     margin-bottom:10px;
 }
+.one-column-skills-section ul{
+    list-style:circle !important;
+}
 .navbar-list a:hover,
 .project-list a:hover{
     text-shadow: 0 0 5px rgb(0, 255, 13);
@@ -77,8 +80,34 @@ a{
 .email-preview{
     width: 250px;
 }
+@media only screen and (min-width:700px) and (max-width: 1100px){
+    .skills-section{
+        height:1000px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .one-column-skills-section{
+        border:2px solid red;
+        width:400px;
+    }
+    .skills-section h2{
+        font-size:35px !important;
+        border:2px solid red;
+   }
+    }
 @media only screen and (max-width: 700px){
    .project-list ul{
     grid-template-columns: 1fr;
+    align-items: center;
+    text-align: center;
+   }
+   .skills-section{
+    height:1000px;
+    flex-direction: column;
+    align-items: center;
+}
+   .skills-section ul h2{
+        font-size:15px !important;
+        border:2px solid red;
    }
 }
