--- a/src/components/projects/landing-pages/yugi-tutor-landing-page/yugiTutorLanding.css
+++ b/src/components/projects/landing-pages/yugi-tutor-landing-page/yugiTutorLanding.css
@@ -192,8 +192,27 @@
 .yugi-tutor-social-links i:hover{
     color: rgba(230, 230, 230, 0.7) !important;
 }
-@media only screen and (min-width: 960px){
-   
+@media only screen and (min-width: 1200px){
+    .yugi-tutor-top-banner{
+        background-size:2000px 1200px;
+        background-position: 0px -300px !important;
+    }
+    .yugi-tutor-arrow-right{
+        margin-top:5px;
+        width:80px !important;
+    }
+    .yugi-tutor-left-column h4{
+        font-size:22px;
+    }
+    .yugi-tutor-left-column p{
+        font-size:16px;
+    }
+    .yugi-tutor-guide-container p{
+        font-size: 20px !important;
+    }
+    .yugi-tutor-get-guide-button{
+        font-size:20px !important;
+    }
 }
 /*midsizes*/
 @media only screen and (min-width: 600px) and (max-width: 960px){
